# check_eeg_data

./: .gitignore  README.md  pyproject.toml
scripts/: inspect_eeg.py
src/: config.py  utils.py
